--- a/templates/main.html
+++ b/templates/main.html
@@ -3,5 +3,20 @@
 {% block title %} Cafe Finder {% endblock %}
 
 {% block content %} 
-Hello!
+<form id="querying" action="/cafes" method="POST">
+  <div class="mb-3">
+    <label for="zipcode" class="form-label">Zip Code</label>
+    <input type="number" class="form-control" id="zipcode" aria-describedby="Email" name=
+    "zipcode">
+    <label for="radius" class="form-label">Radius</label>
+    <select name="radius" class="form-select" aria-label="Radius">
+      <option value="8046" selected>5 mi</option>
+      <option value="16093">10 mi</option>
+      <option value="24140">15 mi</option>
+      <option value="32186">20 mi</option>
+      <option value="40000">25 mi</option>
+    </select>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
   {% endblock %}
