--- a/templates/results.html
+++ b/templates/results.html
@@ -4,11 +4,10 @@
 
 {% block content %} 
 {% for cafe in cafes %}
-  <h1>{{ cafe.name }}</h1>
+  <h1><a href="/cafes/{{ cafe.id }}">{{ cafe.name }}</a></h1>
   <p><img src="{{ cafe.image_url }}" /></p>
   <p>{{ cafe.location.address1 }}</p>
   <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
   <p>{{ cafe.display_phone }}</p>
-  <p></p>
 {% endfor %}
 {% endblock %}
