--- a/templates/details.html
+++ b/templates/details.html
@@ -41,5 +41,7 @@
   <p>{{ review[0]['time_created'] }}</p>
   <p>"{{ review[0]['text'] }}"</p>
   <p><button><a href="{{ review[0]['url'] }}">Read the rest</a></button></p>
-  <p><i id="heart" class="bi bi-heart"></i></p>
+  <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
 {% endblock %}
+
+{% block scripts %}<script src="/static/favorites.js" type="text/javascript"></script>{% endblock %}
