Fixed freeze issue

--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 <form id="querying" action="/cafes" method="POST">
   <div class="mb-3">
     <label for="zipcode" class="form-label">Zip Code</label>
-    <input type="number" class="form-control" id="zipcode" aria-describedby="Email" name=
+    <input type="text" class="form-control" id="zipcode" aria-describedby="Email" name=
     "zipcode">
     <label for="radius" class="form-label">Radius</label>
     <select name="radius" class="form-select" aria-label="Radius">
