Added new icon to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
+                  <a class="nav-link" href="/login"><i class="bi bi-search"></i></a>
                   <a class="nav-link" href="/user/{{ session['user'] }}"><i class="bi bi-person-circle"></i></a>
                   <a class="nav-link" href="#"><i class="bi bi-box-arrow-right"></i></a>
                 </div>
