--- a/templates/details.html
+++ b/templates/details.html
@@ -3,7 +3,6 @@
 {% block title %} Cafe Finder - Results{% endblock %}
 
 {% block content %} 
-  <h1>{{ cafe.name }}</h1>
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -11,10 +10,10 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item">
         <img src="{{ cafe.photos[0] }}" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item active">
         <img src="{{ cafe.photos[1] }}" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
@@ -30,18 +29,22 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <h1>{{ cafe.name }}</h1>
   <p>{{ cafe.location.address1 }}</p>
   <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
   <p>{{ cafe.display_phone }}</p>
+  <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
+
 
   <h2>Reviews</h2>
-  <p>{{ review[0]['user']['name'] }}</p>
-  <p><img src="{{ review[0]['user']['image_url'] }}" /></p>
-  <p>Rating: {{ review[0]['rating'] }} / 5</p>
-  <p>{{ review[0]['time_created'] }}</p>
-  <p>"{{ review[0]['text'] }}"</p>
-  <p><button><a href="{{ review[0]['url'] }}">Read the rest</a></button></p>
-  <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
+  {% for i in range(3) %}
+  <p>{{ review[i]['user']['name'] }}</p>
+  <p><img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/></p>
+  <p>Rating: {{ review[i]['rating'] }} / 5</p>
+  <p>{{ review[i]['time_created'] }}</p>
+  <p>"{{ review[i]['text'] }}"</p>
+  <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
+  {% endfor %}
 {% endblock %}
 
 {% block scripts %}<script src="/static/favorites.js" type="text/javascript"></script>{% endblock %}
