--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
         <!-- Bootstrap icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="/static/css/style.css">
+        {% block head %} {% endblock %}
     </head>
     <body>
       {% block header %}
