--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,14 +7,9 @@
         <!-- Bootstrap icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
-        {% for msg in get_flashed_messages() %}
-        <p class="flash-msg">
-        {{ msg }}
-        </p>
-        {% endfor %}
         {% if login %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
@@ -31,6 +26,11 @@
             </div>
           </div>
         </nav>
+        {% for msg in get_flashed_messages() %}
+        <p class="flash-msg">
+        {{ msg }}
+        </p>
+        {% endfor %}
           <form id="querying" action="/cafes" method="POST">
             <div class="mb-3">
               <label for="zipcode" class="form-label">Zip Code</label>
