--- a/templates/details.html
+++ b/templates/details.html
@@ -39,13 +39,16 @@
   <h2>Reviews</h2>
   {% for i in range(3) %}
   <p>{{ review[i]['user']['name'] }}</p>
+  {% if review[i]['user']['image_url'] %}
   <p><img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/></p>
+  {% else %}
+  <p><img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/></p>
+  {% endif %}
   <p>Rating: {{ review[i]['rating'] }} / 5</p>
   <p>{{ review[i]['time_created'] }}</p>
   <p>"{{ review[i]['text'] }}"</p>
   <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
   {% endfor %}
-  <div id="map"></div>
 {% endblock %}
 
 {% block scripts %}<script src="/static/js/favorites.js" type="text/javascript"></script>{% endblock %}
