--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,7 @@ h2 {
     color: black;
 }
 
-.flash-msg, .hours-state {
+.flash-msg {
     color: red;
     font-weight: bold;
 }
@@ -50,4 +50,14 @@ th {
 table, tr, td {
     border: 1px solid black;
     padding: 5px;
+}
+
+.hours-open {
+    color: green;
+    font-weight: bold;
+}
+
+.hours-closed {
+    color: red;
+    font-weight: bold;
 }
