--- a/templates/details.html
+++ b/templates/details.html
@@ -29,67 +29,80 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <h1>{{ cafe.name }}</h1>
-  <p>Yelp Rating: 
-  {% for s in range(cafe.rating|round|int) %}
-    <i class="bi bi-star-fill"></i>
-  {% endfor %}
-  {% if cafe.rating - cafe.rating|round|int == 0.5 %}
-    <i class="bi bi-star-half"></i>
-  {% endif %}
-  </p>
-  <p>{{ cafe.location.address1 }}</p>
-  <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
-  <p>{{ cafe.display_phone }}</p>
-  <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
-  <table>
-    <thead>
-      <tr>
-        <th colspan="2">Hours</th>
-      </tr>
-    </thead>
-    <tbody>
-    {% set day = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"] %}
-    {% for h in range(day|length) %}
-      {% if h in hours %}
-      <tr>
-        <td>{{ day[h] }}</td>
-        <td>{{ hours[h][0]}} - {{ hours[h][1] }}</td>
-      </tr>
+  <div class="container">
+    <div class="row justify-content-center">
+    <div class="col-6">
+      <h1>{{ cafe.name }}</h1>
+      <p>{{ cafe.location.address1 }}</p>
+      <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
+      <p>{{ cafe.display_phone }}</p>
+      {% if hours[7] == True %}
+      <p class="hours-open">Open Now</p>
       {% else %}
-      <tr>
-        <td>{{ day[h] }}</td>
-        <td>Closed</td>
-      </tr>
-    {% endif %}
-  {% endfor %}
-
-  {% if hours[7] == True %}
-  <p class="hours-state">Open Now</p>
-  {% else %}
-  <p class="hours-state">Closed Now</p>
-  {% endif %}
-  </tbody>
-</table>
-  <h2>Reviews</h2>
-  {% for i in range(3) %}
-  <div class="reviewer">
-  {% if review[i]['user']['image_url'] %}
-  <img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/>
-  {% else %}
-  <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-  {% endif %}
-  {{ review[i]['user']['name'] }}
-  </div>
-    <p>
-    {% for s in range(review[i]['rating']) %}
-    <i class="bi bi-star-fill"></i>
-    {% endfor %}
-    </p>
-  <p>{{ review_dates[i] }}</p>
-  <p>"{{ review[i]['text'] }}"</p>
-  <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
-  {% endfor %}
+      <p class="hours-closed">Closed Now</p>
+      {% endif %}
+    </div>
+    <div class="col-3">
+      <table>
+        <thead>
+          <tr>
+            <th colspan="2">Hours</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% set day = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"] %}
+        {% for h in range(day|length) %}
+          {% if h in hours %}
+          <tr>
+            <td>{{ day[h] }}</td>
+            <td>{{ hours[h][0]}} - {{ hours[h][1] }}</td>
+          </tr>
+          {% else %}
+          <tr>
+            <td>{{ day[h] }}</td>
+            <td>Closed</td>
+          </tr>
+        {% endif %}
+      {% endfor %}
+      </tbody>
+      </table>
+    </div>
+    <div class="col-3">
+        <p>Yelp Rating: 
+          {% for s in range(cafe.rating|round|int) %}
+            <i class="bi bi-star-fill"></i>
+          {% endfor %}
+          {% if cafe.rating - cafe.rating|round|int == 0.5 %}
+            <i class="bi bi-star-half"></i>
+          {% endif %}
+        </p>
+        <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
+    </div>
+    </div>
+    <div class="row justify-content-center">
+    <div class="col-12">
+      <h2>Reviews</h2>
+      {% for i in range(3) %}
+      <div class="reviewer">
+      {% if review[i]['user']['image_url'] %}
+      <img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/>
+      {% else %}
+      <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+      {% endif %}
+      {{ review[i]['user']['name'] }}
+      </div>
+        <p>
+        {% for s in range(review[i]['rating']) %}
+        <i class="bi bi-star-fill"></i>
+        {% endfor %}
+        </p>
+      <p>{{ review_dates[i] }}</p>
+      <p>"{{ review[i]['text'] }}"</p>
+      <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
+      {% endfor %}
+      </div>
+    </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}<script src="/static/js/favorites.js" type="text/javascript"></script>{% endblock %}
