--- a/templates/base.html
+++ b/templates/base.html
@@ -14,13 +14,17 @@
       {% block header %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/">Project Title</a>
+              <div class="navbar-nav">
+                <a class="nav-link" href="/"><i class="bi bi-search"></i></a>
+              </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="justify-content-center">
+                <a class="navbar-brand" href="/">Project Title</a>
+              </div>
+              <div class="justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" href="/"><i class="bi bi-search"></i></a>
                   <a class="nav-link" href="/user/{{ session['user'] }}"><i class="bi bi-person-circle"></i></a>
                   <a class="nav-link" href="/logout"><i class="bi bi-box-arrow-right"></i></a>
                 </div>
