--- a/templates/details.html
+++ b/templates/details.html
@@ -76,12 +76,13 @@
             <i class="bi bi-star-half"></i>
           {% endif %}
         </p>
+        <p>Google Rating: {{ google_cafe ["rating"] }}</p>
         <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
     </div>
     </div>
     <div class="row justify-content-center">
     <div class="col-12">
-      <h2>Reviews</h2>
+      <h2>Yelp Reviews</h2>
       {% for i in range(3) %}
       <div class="reviewer">
       {% if review[i]['user']['image_url'] %}
@@ -100,9 +101,33 @@
       <p>"{{ review[i]['text'] }}"</p>
       <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
       {% endfor %}
+    </div>
+    </div>
+
+    <div class="row justify-content-center">
+    <div class="col-12">
+      <h2>Google Reviews</h2>
+      {% for i in range(5) %}
+      <div class="reviewer">
+      {% if google_cafe['reviews'][i]['profile_photo_url'] %}
+      <img src="{{ google_cafe['reviews'][i]['profile_photo_url'] }}" class="reviewer_photo"/>
+      {% else %}
+      <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+      {% endif %}
+      {{ google_cafe['reviews'][i]['author_name'] }}
+      </div>
+        <p>
+        {% for s in range(google_cafe['reviews'][i]['rating']) %}
+        <i class="bi bi-star-fill"></i>
+        {% endfor %}
+        </p>
+      <p>{{ google_cafe['reviews'][i]['relative_time_description'] }}</p>
+      <p>"{{ google_cafe['reviews'][i]['text'] }}"</p>
+      {% endfor %}
       </div>
     </div>
     </div>
+  </div>
 {% endblock %}
 
 {% block scripts %}<script src="/static/js/favorites.js" type="text/javascript"></script>{% endblock %}
