--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,6 +30,10 @@
             </div>
           </div>
         </nav>
+      <div class="background">
+      <div class="container">
+          <div class="row justify-content-center">
+          <div class="col-12">
         {% for msg in get_flashed_messages() %}
         <p class="flash-msg">
         {{ msg }}
@@ -51,7 +55,15 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
+        </div>
+        </div>
+      </div>
+      </div>
         {%else%}
+      <div class="background">
+      <div class="container">
+        <div class="row justify-content-center">
+        <div class="col-12">
         {% for msg in get_flashed_messages() %}
         <p class="flash-msg">
         {{ msg }}
@@ -86,6 +98,10 @@
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         {%endif %}
+        </div>
+        </div>
+      </div>
+      </div>
          <!-- JavaScript Bundle with Popper -->
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
          <!-- jQuery -->
