--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,13 +3,19 @@
 {% block title %} Cafe Finder - Profile{% endblock %}
 
 {% block content %} 
-<h1>Favorites</h1>
-{% for cafe in favorite_cafes %}
-  <h2><a href="/cafes/{{ cafe.cafe_id }}">{{ cafe.cafe_name }}</a></h2>
-  <p><img class="cafe_photo" src="{{ cafe.image_url }}" /></p>
-  <p>{{ cafe.cafe_street }}</p>
-  <p>{{ cafe.cafe_city }}, {{ cafe.cafe_state }} {{ cafe.cafe_zip }}</p>
-{% endfor %}
+<div class="container">
+  <div class="row justify-content-center">
+  <div class="col-12">
+    <h1>Favorites</h1>
+    {% for cafe in favorite_cafes %}
+      <h2><a href="/cafes/{{ cafe.cafe_id }}">{{ cafe.cafe_name }}</a></h2>
+      <p><img class="cafe_photo" src="{{ cafe.image_url }}" /></p>
+      <p>{{ cafe.cafe_street }}</p>
+      <p>{{ cafe.cafe_city }}, {{ cafe.cafe_state }} {{ cafe.cafe_zip }}</p>
+    {% endfor %}
+  </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block scripts %}{% endblock %}
