--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,3 +71,27 @@ table, tr, td {
     height: 100%;
     width: 100%;
 }
+
+.chart rect:first-of-type {
+    color: #fff;
+    stroke: #3994b6;
+    fill: white;
+  }
+  
+  text:first-of-type {
+    fill: #3994b6;
+    font-family: sans-serif;
+    font-size: 12px;
+  }
+  
+  .chart rect:nth-of-type(2) {
+    color: #fff;
+    stroke: transparent;
+    fill: #3994b6;
+  }
+  
+  text:nth-of-type(2) {
+    fill: #a8d4e4;
+    font-family: sans-serif;
+    font-size: 12px;
+  }
