--- a/templates/details.html
+++ b/templates/details.html
@@ -2,10 +2,6 @@
 
 {% block title %} Cafe Finder - Results{% endblock %}
 
-{% block head %} 
-<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-{% endblock %}
-
 {% block content %} 
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -75,10 +71,6 @@
     <div class="col-4">
         <p>Yelp Rating: {{ cafe.rating }} / 5</p>
         <p>Google Rating: {{ google_cafe ["rating"] }} / 5</p>
-        <p>Foursquare Rating: {{ fs_cafe ["rating"] }} / 10</p>
-        <div id="ratings-chart">
-          <svg></svg>
-        </div>
         <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
     </div>
     </div>
@@ -128,11 +120,45 @@
       {% endfor %}
       </div>
     </div>
+
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <h2>My Reviews</h2>
+        {% if user_review %}
+        <div class="reviewer">
+        <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+        You
+        </div>
+          <p>
+          {% for i in range(user_review[1]) %}
+          <i class="bi bi-star-fill"></i>
+          {% endfor %}
+          </p>
+        <p>{{ user_review[0] }}</p>
+        <p>"{{ user_review[2] }}"</p>
+        <button class="edit_review" class="btn btn-primary">Edit Review</button>
+        <div id="edit_form">
+
+        </div>
+        </div>
+        {% else %}
+        <form id="reviewing" action="/reviewing" method="POST">
+          <div class="mb-3">
+            <label for="rating" class="form-label">Rating</label>
+            <input type="range" class="form-range" min="1" max="5" id="rating" name="rating"> 
+            <label for="review" class="form-label">Review</label>
+            <textarea class="form-control" id="review" rows="3" name="review"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        </div>
+      </div>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
 
 {% block scripts %}
 <script src="/static/js/favorites.js" type="text/javascript"></script>
-<script src="/static/js/chart.js"></script>
+<script src="/static/js/form.js" type="text/javascript"></script>
 {% endblock %}
