--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,10 @@ h2 {
     height: 100vh;
 }
 
+#cafe_map {
+    height: 50vh;
+}
+
 .bi-star-fill, .bi-star-half {
     color: #FFC300;
 }
@@ -94,4 +98,8 @@ table, tr, td {
     fill: #a8d4e4;
     font-family: sans-serif;
     font-size: 12px;
+  }
+
+  .edit-form {
+      display: none;
   }
