--- a/templates/details.html
+++ b/templates/details.html
@@ -3,6 +3,8 @@
 {% block title %} Cafe Finder - Results{% endblock %}
 
 {% block content %} 
+
+{# Photo carousel #}
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -29,16 +31,20 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+{# Begin container #}
   <div class="container">
     <div class="row justify-content-center">
-    <div class="col-4">
+    {# 1/3 columns #}
+    <div class="col-4 p-4">
       <h1>{{ cafe.name }}</h1>
       <p>{{ cafe.location.address1 }}</p>
       <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
       <p>{{ cafe.display_phone }}</p>
       <p><a href="{{ google_cafe['website'] }}" target="_blank">Website</a></p>
     </div>
-    <div class="col-4">
+    {# 2/3 columns #}
+    <div class="col-4 p-4">
       {% if hours[7] == True %}
       <p class="hours-open">Open Now</p>
       {% else %}
@@ -68,125 +74,164 @@
       </tbody>
       </table>
     </div>
-    <div class="col-4">
+    {# 3/3 columns #}
+    <div class="col-4 p-4">
         <p>Yelp Rating: {{ cafe.rating }} / 5</p>
         <p>Google Rating: {{ google_cafe ["rating"] }} / 5</p>
         <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
     </div>
     </div>
+  </div>
+  {# End of container #}
 
+  {# DIV for map display #}
+    <div id="cafe_map">
+
+    </div>
+
+  {# Begin container #}
+  <div class="container">
     <div class="row justify-content-center">
-    <div class="col-12">
-      <div class="accordion" id="reviewsAccordion">
+      {# 1/1 columns - begin Accordion #}
+      <div class="col-12 p-4">
+        <div class="accordion" id="reviewsAccordion">
+          {# 1/3 accordion items #}
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                Yelp Reviews
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#reviewsAccordion">
+              <div class="accordion-body">
+                {% for i in range(3) %}
+                <div class="reviewer">
+                {% if review[i]['user']['image_url'] %}
+                <img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/>
+                {% else %}
+                <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+                {% endif %}
+                {{ review[i]['user']['name'] }}
+                </div>
+                  <p>
+                  {% for s in range(review[i]['rating']) %}
+                  <i class="bi bi-star-fill"></i>
+                  {% endfor %}
+                  </p>
+                <p>{{ review_dates[i] }}</p>
+                <p>"{{ review[i]['text'] }}"</p>
+                <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          {# End of accordion item 1 #}
+  
+        {# 2/3 accordion items #}
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Yelp Reviews
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Google Reviews
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#reviewsAccordion">
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#reviewsAccordion">
             <div class="accordion-body">
-              {% for i in range(3) %}
-              <div class="reviewer">
-              {% if review[i]['user']['image_url'] %}
-              <img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/>
-              {% else %}
-              <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-              {% endif %}
-              {{ review[i]['user']['name'] }}
-              </div>
-                <p>
-                {% for s in range(review[i]['rating']) %}
-                <i class="bi bi-star-fill"></i>
-                {% endfor %}
-                </p>
-              <p>{{ review_dates[i] }}</p>
-              <p>"{{ review[i]['text'] }}"</p>
-              <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
-              {% endfor %}
-            </div>
-          </div>
-        </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Google Reviews
-          </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#reviewsAccordion">
-          <div class="accordion-body">
-            {% for i in range(5) %}
-      <div class="reviewer">
-        {% if google_cafe['reviews'][i]['profile_photo_url'] %}
-        <img src="{{ google_cafe['reviews'][i]['profile_photo_url'] }}" class="reviewer_photo"/>
-        {% else %}
-      <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-      {% endif %}
-      {{ google_cafe['reviews'][i]['author_name'] }}
-      </div>
-        <p>
-        {% for s in range(google_cafe['reviews'][i]['rating']) %}
-        <i class="bi bi-star-fill"></i>
-        {% endfor %}
-        </p>
-      <p>{{ google_cafe['reviews'][i]['relative_time_description'] }}</p>
-      <p>"{{ google_cafe['reviews'][i]['text'] }}"</p>
-      {% endfor %}
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            My Review
-          </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#reviewsAccordion">
-          <div class="accordion-body">
-            <div id="my-review">
-
-            </div>
-            {% if user_review %}
+              {% for i in range(5) %}
         <div class="reviewer">
+          {% if google_cafe['reviews'][i]['profile_photo_url'] %}
+          <img src="{{ google_cafe['reviews'][i]['profile_photo_url'] }}" class="reviewer_photo"/>
+          {% else %}
         <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-        You
+        {% endif %}
+        {{ google_cafe['reviews'][i]['author_name'] }}
         </div>
           <p>
-          {% for i in range(user_review[1]) %}
+          {% for s in range(google_cafe['reviews'][i]['rating']) %}
           <i class="bi bi-star-fill"></i>
           {% endfor %}
           </p>
-        <p>{{ user_review[0] }}</p>
-        <p>"{{ user_review[2] }}"</p>
-        <button class="btn btn-primary edit-review">Edit Review</button>
-        <div id="edit-form">
-        </div>
-        </div>
-        {% else %}
-        <form name="reviewing" id="reviewing" action="/reviewing" method="POST">
-          <div class="mb-3">
-            <label for="rating" class="form-label">Rating</label>
-            <input type="range" class="form-range" min="1" max="5" id="rating" name="rating"> 
-            <label for="review" class="form-label">Review</label>
-            <textarea class="form-control" id="review" rows="3" name="review"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div id="edit-form">
-        </div>
-        </div>
-      </div>
-      {% endif %}
+        <p>{{ google_cafe['reviews'][i]['relative_time_description'] }}</p>
+        <p>"{{ google_cafe['reviews'][i]['text'] }}"</p>
+        {% endfor %}
+            </div>
           </div>
         </div>
+        {# End of accordion item 2 #}
+  
+        {# 3/3 caccordion items #}
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              My Review
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#reviewsAccordion">
+            <div class="accordion-body">
+              <div id="my-review">
+  
+              </div>
+              {% if user_review %}
+          <div class="reviewer">
+          <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+          You
+          </div>
+            <p>
+            {% for i in range(user_review[1]) %}
+            <i class="bi bi-star-fill"></i>
+            {% endfor %}
+            </p>
+          <p>{{ user_review[0] }}</p>
+          <p>"{{ user_review[2] }}"</p>
+          <button class="btn btn-primary edit-review">Edit Review</button>
+          <div class="edit-form">
+            <form name="updating" id="updating" action="/updating" method="POST">
+              <div class="mb-3">
+                <label for="updatedrating" class="form-label">Rating</label>
+                <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating"> 
+                <label for="updatedreview" class="form-label">Review</label>
+                <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+          </div>
+          {% else %}
+          <form name="reviewing" id="reviewing" action="/reviewing" method="POST">
+            <div class="mb-3">
+              <label for="rating" class="form-label">Rating</label>
+              <input type="range" class="form-range" min="1" max="5" id="rating" name="rating"> 
+              <label for="review" class="form-label">Review</label>
+              <textarea class="form-control" id="review" rows="3" name="review"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+          <div class="edit-form">
+            <form name="updating" id="updating" action="/updating" method="POST">
+              <div class="mb-3">
+                <label for="updatedrating" class="form-label">Rating</label>
+                <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
+                <label for="updatedreview" class="form-label">Review</label>
+                <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+          </div>
+          {# End of accordion item 3 #}
+        </div>
+        {% endif %}
+        </div>
       </div>
     </div>
-    </div>
-    </div>
+  </div>
 {% endblock %}
 
 {% block scripts %}
+<script src="/static/js/cafe_map.js"></script>
+<script
+  async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2MwTqduMNK_g-86AK2g72L5NOsWAMBk0&map_ids=b3a38d6b637efa469&callback=initMap">
+</script>
 <script src="/static/js/favorites.js" type="text/javascript"></script>
-<script src="/static/js/edit.js" type="text/javascript"></script>
 <script src="/static/js/form.js" type="text/javascript"></script>
 {% endblock %}
