--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,7 @@ body, html {
     border-radius: 50%;
     width: 100px;
     height: 100px;
+    object-fit: cover;
 }
 
 .w-100 {
@@ -102,8 +103,12 @@ table, tr, td {
 
   .edit-form {
       display: none;
-  }
-
-  .edit-form {
       padding-top: 10px;
   }
+
+  /* .form {
+      background: rgba(76, 175, 80, 0.3);
+      border-radius: 25px;
+      padding: 20px; 
+      height: 150px; 
+  } */
