--- a/templates/details.html
+++ b/templates/details.html
@@ -41,7 +41,9 @@
       <p>{{ cafe.location.address1 }}</p>
       <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
       <p>{{ cafe.display_phone }}</p>
-      <p><a href="{{ google_cafe['website'] }}" target="_blank">Website</a></p>
+      {% if 'website' in google_cafe %}
+        <p><a href="{{ google_cafe['website'] }}" target="_blank">Website</a></p>
+      {% endif %}
     </div>
     {# 2/3 columns #}
     <div class="col-4 p-4">
@@ -77,7 +79,7 @@
     {# 3/3 columns #}
     <div class="col-4 p-4">
         <p>Yelp Rating: {{ cafe.rating }} / 5</p>
-        <p>Google Rating: {{ google_cafe ["rating"] }} / 5</p>
+        <p>Google Rating: {{ google_cafe["rating"] }} / 5</p>
         <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
     </div>
     </div>
