--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,11 @@
 <div class="container">
   <div class="row">
     <div class="col-6">
-      <img src="{{ profile_pic }}" class="reviewer_photo">
+      {% if profile_pic %}
+        <img src="{{ profile_pic }}" class="reviewer_photo">
+      {% else %}
+        <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+      {% endif %}
     </div>
     <div class="col-6">
       <form action="/user-image" method="POST" enctype="multipart/form-data">
