--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,17 +5,17 @@
 {% block content %} 
 <div class="container">
   <div class="row">
-    <div class="col-12">
-      {% if profile_pic %}
-        <img src="{{ profile_pic }}" class="reviewer_photo">
-      {% else %}
-        <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-      {% endif %}
-      <form action="/user-image" method="POST" enctype="multipart/form-data">
+    <div class="col-6 p-4">
+      <span id="profile-pic-display">
+      </span>
+      <span>Email: {{ user.email }} </span>
+    </div>
+    <div class="col-6 p-4">
+      <form action="/user-image" method="POST" enctype="multipart/form-data" id="profile-pic-form" name="profile-pic-form">
         <div class="mb-3">
-          <label for="login-email" class="form-label">Profile Picture</label>
-          <input type="file" class="form-control" id="profile-pic" aria-describedby="profilePicture" name=
-          "profile-pic">
+          <label for="login-email" class="form-label">Update Profile Picture</label>
+          <input type="file" class="form-control" id="profile-img" aria-describedby="profilePicture" name=
+          "profile-img">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
@@ -56,4 +56,6 @@
 </div>
 {% endblock %}
 
-{% block scripts %}{% endblock %}
+{% block scripts %}
+<script src="/static/js/profile-pic.js" type="text/javascript"></script>
+{% endblock %}
