--- a/templates/results.html
+++ b/templates/results.html
@@ -23,6 +23,7 @@
   <!-- DIV to display map in with JS-->
   <div class="col-7" id="map"></div>
   </div>
+  <!-- End of column #2 -->
 
 </div>
 {% endblock %}
