--- a/templates/details.html
+++ b/templates/details.html
@@ -231,7 +231,7 @@
               <form name="reviewing" id="reviewing" action="/reviewing" method="POST">
                 <div class="mb-3">
                   <!-- Rating slider -->
-                  <label for="rating" class="form-label">Rating:</label><span class="bubble"></span>
+                  <label for="rating" class="form-label">Rating:</label><span class="range-value"></span>
                   <input type="range" class="form-range" min="1" max="5" id="rating" name="rating">
                   <!-- Review text box -->
                   <label for="review" class="form-label">Review</label>
@@ -246,7 +246,7 @@
                 <form name="updating" id="updating" action="/updating" method="POST">
                   <div class="mb-3">
                     <!-- Rating slider -->
-                    <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
+                    <label for="updatedrating" class="form-label">Rating:</label><span class="range-value"></span>
                     <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
                     <!-- Review text box -->
                     <label for="updatedreview" class="form-label">Review</label>
