Updated class of missed range input

--- a/templates/details.html
+++ b/templates/details.html
@@ -213,7 +213,7 @@
                 <form name="updating" id="updating" action="/updating" method="POST">
                   <div class="mb-3">
                     <!-- Rating slider -->
-                    <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
+                    <label for="updatedrating" class="form-label">Rating:</label><span class="range-value"></span>
                     <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
                     <!-- Review text box -->
                     <label for="updatedreview" class="form-label">Review</label>
