--- a/templates/details.html
+++ b/templates/details.html
@@ -140,7 +140,7 @@
                     {{ yelp_reviews[i]['user']['name'] }}
                   </div>
                   <p>
-                    <!-- For each number in ratings -->
+                    <!-- For number in ratings -->
                     {% for s in range(yelp_reviews[i]['rating']) %}
                     <i class="bi bi-star-fill"></i>
                     {% endfor %}
